[package]
name = "txnos-terminal"
version = "0.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
tokio = { version = "^1.12", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
repl-rs = "^0.2"
blake2 = "0.10.6"
hex = "0.4"